small tabs overflow fix, added csv button

--- a/assets/scss/pages/_blockchain.scss
+++ b/assets/scss/pages/_blockchain.scss
@@ -1080,6 +1080,13 @@ a {
 }
 
 .btn_asset_download {
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: 1.8px;
+  color: rgba(#3f4d60, .6);
+
+  @include rem(font-size, 14px);
   @include rem(margin, 0 2px);
 
   .icon {
